--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chickenadobo.html" target="_blank" rel="noopener noreferrer">Chicken Adobo</a>
+    <ul>
+        <li><a href="recipes/chickenadobo.html" target="_blank" rel="noopener noreferrer">Chicken Adobo</a></li>
+        <li><a href="recipes/beefshortrib.html" target="_blank" rel="noopener noreferrer">Braised Beef Short Rib</a></li>
+    </ul>
 </body>
 </html>
