Added Completed Links of Recipes to Odin Recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/chickenadobo.html" target="_blank" rel="noopener noreferrer">Chicken Adobo</a></li>
         <li><a href="recipes/beefshortrib.html" target="_blank" rel="noopener noreferrer">Braised Beef Short Rib</a></li>
+        <li><a href="recipes/picodegallo.html"  target="_blank" rel="noopener noreferrer">Pico De Gallo</a></li>
     </ul>
 </body>
 </html>
